# ChangeLog for app-misc/pdate
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*pdate-1.0 (02 Dec 2005)

  02 Dec 2005; Denis Sacchet <ouba@ouba.org> :
  Initial import.